feat(roles): add lightweight role DTO and getAllServerRoles service method